@@ -42,6 +42,7 @@ import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+// TODO: refactor, this class makes my IDE literally run at 10fps. Wish I was kidding.
 public class Items {
     private static final Logger log = LoggerFactory.getLogger(Items.class);
 
@@ -57,7 +58,7 @@ public class Items {
             SHARK, WRENCH_COMET, WRENCH_SPARKLE, CRAB, SQUID, SHRIMP, MOON_RUNES, SNOWFLAKE, BROKEN_SPARKLE_PICK, BROKEN_COMET_PICK,
             BROKEN_STAR_PICK, BROKEN_COMET_ROD, BROKEN_STAR_ROD, BROKEN_SPARKLE_ROD, INCUBATOR_EGG, WATER_BOTTLE, MAGIC_WATCH, STEAK,
             CHICKEN, MILK_2, DOG_FOOD, CAT_FOOD, HAMSTER_FOOD, WOOD, AXE, COMET_AXE, STAR_AXE, SPARKLE_AXE, HELLFIRE_AXE, MOON_AXE,
-            MOON_PICK, MOON_ROD, HELLFIRE_PICK, HELLFIRE_ROD, PET_HOUSE;
+            MOON_PICK, MOON_ROD, HELLFIRE_PICK, HELLFIRE_ROD, PET_HOUSE, LEAVES, APPLE, PEAR, CHERRY_BLOSSOM;
 
     private static final Random r = new Random();
     private static final IncreasingRateLimiter lootCrateRatelimiter = new IncreasingRateLimiter.Builder()
@@ -130,11 +131,13 @@ public class Items {
             FISH = new Fish(ItemType.FISHING, 1, "\uD83D\uDC1F", "Fish", "items.fish", "items.description.fish", 10, false),
             TROPICAL_FISH = new Fish(ItemType.FISHING, 2, "\uD83D\uDC20", "Tropical Fish", "items.tropical_fish", "items.description.tropical_fish", 30, false),
             BLOWFISH = new Fish(ItemType.FISHING, 3, "\uD83D\uDC21", "Blowfish", "items.blowfish", "items.description.blowfish", 15, false),
+
             // ---------------------------------- 5.0 MINING ITEMS START HERE ----------------------------------
             COMET_GEM = new Item(ItemType.CAST_OBTAINABLE, "\u2604", "Comet Gem", "items.comet_gem", "items.description.comet_gem", 40, true, false, "3;1", 51, 24),
             STAR_GEM = new Item(ItemType.CAST_OBTAINABLE, "\ud83c\udf1f", "Star Gem", "items.star_gem", "items.description.star_gem", 60, true, false, "4;1", 51, 25),
             COBWEB = new Item(ItemType.MINE, "\uD83D\uDD78", "Cobweb", "items.cobweb", "items.description.cobweb", 10, false),
             GEM_FRAGMENT = new Item(ItemType.MINE, "\uD83D\uDCAB", "Gem Fragment", "items.fragment", "items.description.fragment", 50, false),
+
             // ---------------------------------- 5.0 ITEMS START HERE (again lol) ----------------------------------
             MOP = new Item(ItemType.INTERACTIVE, "\uD83E\uDDF9", "Mop", "items.mop", "items.description.mop", 10, true),
             CLAIM_KEY = new Item(ItemType.WAIFU, "\uD83D\uDDDD", "Claim Key", "items.claim_key", "items.description.claim_key", 1, false, true),
@@ -157,7 +160,7 @@ public class Items {
             MINE_PREMIUM_CRATE = new Item(ItemType.CRATE, EmoteReference.PREMIUM_MINE_CRATE.getDiscordNotation(), "Gem Premium Crate", "items.mine_premium_crate", "items.description.mine_premium_crate", 0, false, false, true, (ctx, season) -> openLootCrate(ctx, ItemType.LootboxType.MINE_PREMIUM, 69, EmoteReference.PREMIUM_MINE_CRATE, 5, season)),
             COMET_ROD = new FishRod(ItemType.CAST_FISH, 6, 1, 15, EmoteReference.COMET_ROD.getDiscordNotation(), "Comet Gem Rod", "Comet Rod", "items.comet_rod", "items.description.comet_rod", 150, "1;3;3", List.of(90, 44, 101), 90, 44, 48, 101),
             STAR_ROD = new FishRod(ItemType.CAST_FISH, 9, 2, 10, EmoteReference.STAR_ROD.getDiscordNotation(), "Star Gem Rod", "Star Rod", "items.star_rod", "items.description.star_rod", 250, "1;3;3", List.of(130, 44, 101), 130, 44, 49, 101),
-            OLD_SPARKLE_ROD = new FishRod(ItemType.COMMON, 3, -1, -1, "\uD83C\uDFA3", "Old Sparkly Rod", "general.deprecated", "general.deprecated", 65, "", Collections.emptyList(), 2),
+            OLD_SPARKLE_ROD = new FishRod(ItemType.DEPRECATED, 3, -1, -1, "\uD83C\uDFA3", "Old Sparkly Rod", "general.deprecated", "general.deprecated", 65, "", Collections.emptyList(), 2),
             SPARKLE_PICKAXE = new Pickaxe(ItemType.MINE_RARE_PICK, 0.04f, 3, 5, EmoteReference.SPARKLE_PICK.getDiscordNotation(), "Sparkle Pickaxe", "items.sparkle_pick", "items.description.sparkle_pick", 1200, true, false, "1;3;1;7", List.of(74, 10), 450, 10, 74, 18, 101),
             SPARKLE_FRAGMENT = new Item(ItemType.MINE_RARE, "\u2728", "Sparkle Fragment", "items.sparkle", "items.description.sparkle", 605, false),
             SPARKLE_ROD = new FishRod(ItemType.CAST_FISH, 14, 3, 4, EmoteReference.SPARKLE_ROD.getDiscordNotation(), "Sparkle Rod", "items.sparkle_rod", "items.description.sparkle_rod", 800, "1;3;1;3", List.of(44, 18, 101), 250, 44, 74, 18, 101),
@@ -170,6 +173,7 @@ public class Items {
             SHRIMP = new Fish(ItemType.FISHING, 3, "\uD83E\uDD90", "Shrimp", "items.shrimp", "items.description.shrimp", 35, false),
             MOON_RUNES = new Item(ItemType.MINE, "\uD83C\uDF19", "Moon Runes", "items.moon", "items.description.moon", 100, false),
             SNOWFLAKE = new Item(ItemType.MINE, "\u2744\uFE0F", "Snowflake", "items.flake", "items.description.flake", 25, true, false, "1;1", 51, 50),
+
             // ---------------------------------- 5.3 BROKEN ITEMS START HERE ----------------------------------
             BROKEN_SPARKLE_PICK = new Broken(73, EmoteReference.BROKEN_SPARKLE_PICK.getDiscordNotation(), "Broken Sparkle Pickaxe", "items.broken_sparkle_pick", "items.description.broken_sparkle_pick", 100, "1,74;4,84;2,50"),
             BROKEN_COMET_PICK = new Broken(61, EmoteReference.BROKEN_COMET_PICK.getDiscordNotation(), "Broken Comet Pickaxe", "items.broken_comet_pick", "items.description.broken_comet_pick", 40, "1,48;3,84;2,50"),
@@ -178,33 +182,39 @@ public class Items {
             BROKEN_COMET_ROD = new Broken(70, EmoteReference.BROKEN_COMET_ROD.getDiscordNotation(), "Broken Comet Rod", "items.broken_comet_rod", "items.description.broken_comet_rod", 30, "1,48;3,84;2,50"),
             BROKEN_STAR_ROD = new Broken(71, EmoteReference.BROKEN_STAR_ROD.getDiscordNotation(), "Broken Star Rod", "items.broken_star_rod", "items.description.broken_star_rod", 30, "1,49;3,84;3,50"),
             // ---------------------------------- 5.3 BROKEN ITEMS END HERE ----------------------------------
+
             // ---------------------------------- 5.4 PET ITEMS START HERE ----------------------------------
             INCUBATOR_EGG = new Item(ItemType.PET, "\uD83E\uDD5A", "Incubator Egg", "items.incubator_egg", "items.description.incubator_egg", 300, false, false, "4;3;1", 11, 12, 18),
             WATER_BOTTLE = new Water(ItemType.PET, "", "Water Bottle", "items.water_bottle", "items.description.water_bottle", 100, true),
             // ---------------------------------- 5.7 PET ITEMS END HERE ----------------------------------
             MAGIC_WATCH = new Item(ItemType.COLLECTABLE, "\u231A", "Magical Watch", "items.magic_watch", "items.description.magic_watch",0, false, false),
+
             // ---------------------------------- 5.7 PET ITEMS START HERE ----------------------------------
-            // TODO: change emojis
+            // TODO: Pet house emoji? I wonder what we could use.
             PET_HOUSE = new Item(ItemType.PET, "", "Pet House", "items.pet_house", "items.description.pet_house", 170, true, true),
-            STEAK = new Food(10, "", "Steak", "items.steak", "items.description.steak", 170, true),
-            CHICKEN = new Food(10, "", "Chicken", "items.chicken", "items.description.chicken", 130, true),
-            MILK_2 = new Food(10, "", "Milk Bottle", "items.milk_bottle", "items.description.milk_bottle", 97, true),
-            DOG_FOOD = new Food(10, "", "Dog Food", "items.dog_food", "items.description.dog_food", 130, true),
-            CAT_FOOD = new Food(10, "", "Cat Food", "items.cat_food", "items.description.cat_food", 130, true),
-            HAMSTER_FOOD = new Food(10, "", "Hamster Food", "items.hamster_food", "items.description.hamster_food", 75, true),
+            STEAK = new Food(10, "\ud83e\udd69", "Steak", "items.steak", "items.description.steak", 170, true),
+            CHICKEN = new Food(10, "\ud83d\udc14", "Chicken", "items.chicken", "items.description.chicken", 130, true),
+            MILK_2 = new Food(10, "\ud83e\udd5b", "Milk", "items.milk", "items.description.milk", 97, true),
+            DOG_FOOD = new Food(10, "\ud83c\udf56", "Dog Food", "items.dog_food", "items.description.dog_food", 130, true),
+            CAT_FOOD = new Food(10, "\ud83e\udd6b", "Cat Food", "items.cat_food", "items.description.cat_food", 130, true),
+            HAMSTER_FOOD = new Food(10, "\ud83c\udf31", "Hamster Food", "items.hamster_food", "items.description.hamster_food", 75, true),
+
             // ---------------------------------- 5.7 ITEMS START HERE ----------------------------------
-            WOOD = new Item(ItemType.COMMON, "", "Wood", "items.wood", "items.description.wood", 10, true),
-            MOON_PICK = new Pickaxe(ItemType.MINE_RARE_PICK, 0.1f, 3, 7, "", "Moon Pickaxe", "items.moon_pick", "items.description.moon_pick", 1000, true, false, "1;3;2;5;10", List.of(74, 10, 101), 450, 10, 83, 18, 76, 101),
-            HELLFIRE_PICK = new Pickaxe(ItemType.MINE_RARE_PICK, 0.00001f, 3, 1, "", "Hellfire Pickaxe", "items.hellfire_pick", "items.description.hellfire_pick", 15000, true, false, "999;1;175;1;175;1;50;1;35;50", Collections.emptyList(), 2500, 18, 57, 48, 61, 49, 62, 74, 73, 101, 76),
+            WOOD = new Item(ItemType.CHOP_DROP, "\ud83e\udeb5", "Wood", "items.wood", "items.description.wood", 25, false),
+            MOON_PICK = new Pickaxe(ItemType.MINE_RARE_PICK, 0.1f, 3, 7, EmoteReference.MOON_PICK.getDiscordNotation(), "Moon Pickaxe", "items.moon_pick", "items.description.moon_pick", 1000, true, false, "1;3;2;5;10", List.of(74, 10, 101), 450, 10, 83, 18, 76, 101),
+            HELLFIRE_PICK = new Pickaxe(ItemType.MINE_RARE_PICK_NODROP, 0.00001f, 3, 1, EmoteReference.HELLFIRE_PICK.getDiscordNotation(), "Hellfire Pickaxe", "items.hellfire_pick", "items.description.hellfire_pick", 15000, true, false, "450;1;175;1;175;1;55;1;50;50", Collections.emptyList(), 3000, 18, 57, 48, 61, 49, 62, 74, 73, 101, 76),
             AXE = new Axe(ItemType.CHOP_AXE, 0.19f, "\uD83E\uDE93", "Axe", "items.axe", "items.description.axe", 100, true, 35),
-            COMET_AXE = new Axe(ItemType.CHOP_AXE, 0.13f, 1, 10, "", "Comet Axe", "items.comet_axe", "items.description.comet_axe", 290, true, false, "1;3;8", List.of(48, 101), 170, 10, 48, 101),
-            STAR_AXE = new Axe(ItemType.CHOP_AXE, 0.09f, 1, 10, "", "Star Axe", "items.star_pick", "items.description.star_axe", 350, true, false, "1;3;7", List.of(49, 101), 220, 10, 49, 101),
-            SPARKLE_AXE = new Axe(ItemType.CHOP_RARE_AXE, 0.04f, 3, 5, "", "Sparkle Axe", "items.sparkle_axe", "items.description.sparkle_axe", 1200, true, false, "1;3;2;8", List.of(74, 10, 101), 460, 10, 74, 18, 101),
-            MOON_AXE = new Axe(ItemType.CHOP_RARE_AXE, 0.1f, 3, 7, "", "Moon Pickaxe", "items.moon_pick", "items.description.moon_pick", 1000, true, false, "1;3;2;10", List.of(74, 10, 101), 480, 10, 83, 18, 101),
-            //TODO: recipe
-            HELLFIRE_AXE = new Axe(ItemType.CHOP_RARE_AXE, 0.00001f, 3, 1, "", "Hellfire Axe", "items.hellfire_axe", "items.description.hellfire_axe", 15000, true, false, "1;3;2;10", Collections.emptyList(), 2800, 10, 83, 18, 101),
-            MOON_ROD = new FishRod(ItemType.CAST_FISH, 12, 3, 4, "", "Moon Rod", "items.moon_rod", "items.description.moon_rod", 800, "1;3;1;3", List.of(44, 18), 350, 44, 74, 18, 101),
-            HELLFIRE_ROD = new FishRod(ItemType.CAST_FISH, 14, 3, 4, "", "Hellfire Rod", "items.hellfire_rod", "items.description.hellfire_rod", 15000, "999;175;1;175;1;50;1;35;50", Collections.emptyList(), 1950, 18, 48, 70, 49, 71, 74, 75, 101, 76),
+            COMET_AXE = new Axe(ItemType.CHOP_AXE, 0.13f, 1, 10, EmoteReference.COMET_AXE.getDiscordNotation(), "Comet Axe", "items.comet_axe", "items.description.comet_axe", 290, true, false, "1;3;8", List.of(48, 101), 170, 10, 48, 101),
+            STAR_AXE = new Axe(ItemType.CHOP_AXE, 0.09f, 1, 10, EmoteReference.STAR_AXE.getDiscordNotation(), "Star Axe", "items.star_pick", "items.description.star_axe", 350, true, false, "1;3;7", List.of(49, 101), 220, 10, 49, 101),
+            SPARKLE_AXE = new Axe(ItemType.CHOP_RARE_AXE, 0.04f, 3, 5, EmoteReference.SPARKLE_AXE.getDiscordNotation(), "Sparkle Axe", "items.sparkle_axe", "items.description.sparkle_axe", 1200, true, false, "1;3;2;8", List.of(74, 10, 101), 460, 10, 74, 18, 101),
+            MOON_AXE = new Axe(ItemType.CHOP_RARE_AXE, 0.1f, 3, 7, EmoteReference.MOON_AXE.getDiscordNotation(), "Moon Pickaxe", "items.moon_pick", "items.description.moon_pick", 1000, true, false, "1;3;2;10", List.of(83, 10, 101), 480, 10, 83, 18, 101),
+            HELLFIRE_AXE = new Axe(ItemType.CHOP_RARE_AXE_NODROP, 0.00001f, 3, 1, EmoteReference.HELLFIRE_AXE.getDiscordNotation(), "Hellfire Axe", "items.hellfire_axe", "items.description.hellfire_axe", 15000, true, false, "450;1;175;1;175;1;55;1;50;50", Collections.emptyList(), 3100, 18, 57, 48, 61, 49, 62, 74, 73, 101, 76),
+            MOON_ROD = new FishRod(ItemType.CAST_FISH, 12, 3, 4, EmoteReference.MOON_ROD.getDiscordNotation(), "Moon Rod", "items.moon_rod", "items.description.moon_rod", 800, "1;3;3", List.of(44, 18), 350, 44, 83, 101),
+            HELLFIRE_ROD = new FishRod(ItemType.FISHING_RARE_NODROP, 14, 3, 4, EmoteReference.HELLFIRE_ROD.getDiscordNotation(), "Hellfire Rod", "items.hellfire_rod", "items.description.hellfire_rod", 15000, "450;175;1;175;1;50;1;35;50", Collections.emptyList(), 2300, 18, 48, 105, 49, 106, 74, 107, 101, 76),
+            LEAVES = new Item(ItemType.CHOP_DROP, "\ud83c\udf43", "Leaves", "items.leaves", "items.description.leaves", 5, false),
+            APPLE = new Item(ItemType.CHOP_DROP, "\ud83c\udf4e", "Apple", "items.apple", "items.description.apple", 10, false),
+            PEAR = new Item(ItemType.CHOP_DROP, "\ud83c\udf50", "Pear", "items.pear", "items.description.pear", 10, false),
+            CHERRY_BLOSSOM = new Item(ItemType.CHOP_DROP, "\ud83c\udf38", "Cherry Blossom", "items.cherry_blossom", "items.description.cherry_blossom", 5, false),
     };
 
     public static void setItemActions() {
